--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 # Versiones principales
 agp = "8.9.1"
 composeCharts = "0.1.7"
+converterGson = "2.11.0"
 datastorePreferencesVersion = "1.0.0"
 firebaseBom = "33.15.0"
 hiltNavigationComposeVersion = "1.1.0"
@@ -23,6 +24,8 @@ hiltNavigationCompose = "1.2.0"
 materialIconsExtended = "1.7.8"
 navigationComposeVersion = "2.7.7"
 playServicesWearable = "19.0.0"
+playServicesWearableVersion = "18.1.0"
+retrofit = "2.11.0"
 room = "2.7.2"
 
 # Compose
@@ -67,6 +70,7 @@ androidx-ui-text-google-fonts = { module = "androidx.compose.ui:ui-text-google-f
 androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 compose-charts = { module = "io.github.ehsannarmani:compose-charts", version.ref = "composeCharts" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
@@ -100,6 +104,8 @@ androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", vers
 # Metadata
 kotlinx-metadata-jvm = { module = "org.jetbrains.kotlinx:kotlinx-metadata-jvm", version.ref = "kotlinxMetadataJvm" }
 play-services-wearable = { module = "com.google.android.gms:play-services-wearable", version.ref = "playServicesWearable" }
+play-services-wearable-v1810 = { module = "com.google.android.gms:play-services-wearable", version.ref = "playServicesWearableVersion" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 tastytoast = { module = "com.sdsmdg.tastytoast:tastytoast", version.ref = "tastytoast" }
 
 [plugins]
