--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@
 agp = "8.9.1"
 composeCharts = "0.1.7"
 converterGson = "2.11.0"
+converterGsonVersion = "2.9.0"
 datastorePreferencesVersion = "1.0.0"
 firebaseBom = "33.15.0"
 hiltNavigationComposeVersion = "1.1.0"
@@ -26,6 +27,7 @@ navigationComposeVersion = "2.7.7"
 playServicesWearable = "19.0.0"
 playServicesWearableVersion = "18.1.0"
 retrofit = "2.11.0"
+retrofitVersion = "2.9.0"
 room = "2.7.2"
 
 # Compose
@@ -71,6 +73,7 @@ androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 compose-charts = { module = "io.github.ehsannarmani:compose-charts", version.ref = "composeCharts" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+converter-gson-v290 = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGsonVersion" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
@@ -106,6 +109,7 @@ kotlinx-metadata-jvm = { module = "org.jetbrains.kotlinx:kotlinx-metadata-jvm", 
 play-services-wearable = { module = "com.google.android.gms:play-services-wearable", version.ref = "playServicesWearable" }
 play-services-wearable-v1810 = { module = "com.google.android.gms:play-services-wearable", version.ref = "playServicesWearableVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-v290 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofitVersion" }
 tastytoast = { module = "com.sdsmdg.tastytoast:tastytoast", version.ref = "tastytoast" }
 
 [plugins]
