--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,68 +1,54 @@
 [versions]
 # Versiones principales
-agp = "8.9.1"
+agp = "8.11.1"
 composeCharts = "0.1.7"
-converterGson = "2.11.0"
-converterGsonVersion = "2.9.0"
-datastorePreferencesVersion = "1.0.0"
-firebaseBom = "33.15.0"
-hiltNavigationComposeVersion = "1.1.0"
-kotlin = "2.1.21"
+converterGson = "3.0.0"
+datastorePreferencesVersion = "1.1.7"
+firebaseBom = "34.0.0"
+hiltNavigationComposeVersion = "1.2.0"
+kotlin = "2.2.0"
 
 # AndroidX Core
-coreKtx = "1.13.1"
-activityCompose = "1.9.0"
+coreKtx = "1.16.0"
 
 # Lifecycle
-lifecycleRuntimeKtx = "2.8.7"
-lifecycleViewmodelKtx = "2.8.7"
+lifecycleRuntimeKtx = "2.9.2"
+lifecycleViewmodelKtx = "2.9.2"
 
 # Hilt
-hiltAndroid = "2.51.1"
-hiltNavigationCompose = "1.2.0"
+hiltAndroid = "2.57"
 
 # Room
 materialIconsExtended = "1.7.8"
-navigationComposeVersion = "2.7.7"
+navigationComposeVersion = "2.9.2"
 playServicesWearable = "19.0.0"
-playServicesWearableVersion = "18.1.0"
-retrofit = "2.11.0"
-retrofitVersion = "2.9.0"
+retrofit = "3.0.0"
 room = "2.7.2"
 
 # Compose
-composeBom = "2025.06.00"
-composeCompiler = "1.5.3"
+composeBom = "2025.07.00"
 material3 = "1.3.2"
-navigationCompose = "2.9.0"
-
-# Testing
-junit = "4.13.2"
-androidxJunit = "1.1.5"
-espressoCore = "3.5.1"
 
 # Otras dependencias
-datastorePreferences = "1.1.7"
-kotlinxMetadataJvm = "0.9.0"
 runtimeLivedata = "1.8.3"
-tastytoast = "0.1.1"
 ui = "1.8.3"
 uiTextGoogleFonts = "1.8.3"
 workRuntimeKtx = "2.10.2"
+play_services_location = "21.3.0"
+
+
 
 [libraries]
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "play_services_location" }
+
 # AndroidX Core
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
-androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
 
 # Lifecycle
 androidx-datastore-preferences-v100 = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferencesVersion" }
 androidx-hilt-navigation-compose-v110 = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationComposeVersion" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
-androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeKtx" }
-androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelKtx" }
-
 # Hilt
 androidx-material-icons-extended-v178 = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-navigation-compose-v277 = { module = "androidx.navigation:navigation-compose", version.ref = "navigationComposeVersion" }
@@ -73,48 +59,30 @@ androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 compose-charts = { module = "io.github.ehsannarmani:compose-charts", version.ref = "composeCharts" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
-converter-gson-v290 = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGsonVersion" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-database = { module = "com.google.firebase:firebase-database" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltAndroid" }
-androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 
 # Room
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
-androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 
 # Compose
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
 androidx-compose-ui = { module = "androidx.compose.ui:ui" }
-androidx-compose-ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
-androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
-androidx-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version = "1.6.0" }
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
-
 # DataStore
-androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+#androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 
-# Testing
-junit = { module = "junit:junit", version.ref = "junit" }
-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidxJunit" }
-androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCore" }
 
 # Metadata
-kotlinx-metadata-jvm = { module = "org.jetbrains.kotlinx:kotlinx-metadata-jvm", version.ref = "kotlinxMetadataJvm" }
 play-services-wearable = { module = "com.google.android.gms:play-services-wearable", version.ref = "playServicesWearable" }
-play-services-wearable-v1810 = { module = "com.google.android.gms:play-services-wearable", version.ref = "playServicesWearableVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
-retrofit-v290 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofitVersion" }
-tastytoast = { module = "com.sdsmdg.tastytoast:tastytoast", version.ref = "tastytoast" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" }
-ksp = { id = "com.google.devtools.ksp", version = "1.9.23-1.0.20" }
