--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-                <data android:scheme="wear" android:host="*" android:path="/sensor_data"/>
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/sensor_data"/>
             </intent-filter>
         </service>
 
